# soulwhistle

./: .gitignore  CITATIONS.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  LICENSE  README.md  TODO.md
.claude/skills/preset-creator/: README.md  SKILL.md
.github/workflows/: build-linux.yml  build-windows.yml
data/: README.md  focus_10_analysis.json  focus_12_analysis.json  focus_15_analysis.json  focus_21_analysis.json  preset.json
docs/: ANALYZER_VALIDATION.md  CHANGELOG.md  COHERENCE_DECODE.md  COMPLETE_FREQUENCY_MAP.md  DATA_INTEGRATION_GUIDE.md  DEEP_FOCUS_ADHD_GUIDE.md  DUAL_PATH_ARCHITECTURE.md  README.md  TESTING.md
presets/: DEFAULT_actual_dog_whistle.json  DEFAULT_deep_focus_active.json  DEFAULT_deep_focus_adhd.json  DEFAULT_deep_focus_calm.json  DEFAULT_deep_focus_peak.json  DEFAULT_explore_all.json  DEFAULT_focus_10_mind_awake.json  DEFAULT_focus_12_expanded.json  DEFAULT_focus_15_no_time.json  DEFAULT_focus_21_bridge.json  DEFAULT_uap_brycehelm.json  DEFAULT_uap_enigmatic_ideas.json  DEFAULT_uap_frequencies.json  DEFAULT_uap_rf_ultrasonic.json  DEFAULT_uap_sweep_18khz.json  DEFAULT_uap_sweep_24khz.json
research/: ALPHA_THETA_RESEARCH_SUMMARY.md  ANIMAL_ULTRASONIC_RF_RESEARCH.md  FOCUS_10_ANALYSIS.md  FOCUS_15_ANALYSIS.md  FOCUS_21_ANALYSIS.md  FUTURE_IDEAS.md  MONROE_INSTITUTE_RESEARCH.md  UAP_VARIANTS.md
src/: audio.rs  coherence.rs  constants.rs  embedded_presets.rs  main.rs  rf.rs  streaming.rs  utils.rs
tools/: coherence_analyzer.py
