[package]
name = "soulwhistle"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/soulwhistle-project/soulwhistle"

[dependencies]
anyhow = "1.0.100"
cpal = "0.17.0"
crossterm = "0.29.0"
num-complex = "0.4.6"
parking_lot = "0.12.5"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
textwrap = "0.16"
tiny_http = "0.12.0"
